--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>UNACIEM</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" href="assets/images/icon.png" />
     
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
